Improve audio processing

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,10 @@
-# API Keys
+# Gemini API
 GEMINI_API_KEY=your_gemini_api_key_here
 GEMINI_FALLBACK_MODEL=gemini-1.5-flash
 GEMINI_PRIMARY_MODEL=gemini-2.0-flash-exp
 
-# MoeGoe TTS API
-MOEGOE_API_URL=http://localhost:23456
-MOEGOE_SPEAKER_ID=0
+# NijiVoice TTS API
+NIJIVOICE_API_KEY=your_nijivoice_api_key_here
 
 # AssemblyAI STT
 ASSEMBLYAI_API_KEY=your_assemblyai_api_key_here
