--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ python-engineio==4.7.1
 google-generativeai==0.8.0
 requests==2.31.0
 python-dotenv==1.0.0
+elevenlabs==1.18.1
 PyAudio==0.2.11
 websockets==12.0
 sqlite3-lib==0.1.0
