--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-Flask==3.0.0
-Flask-CORS==4.0.0
-Flask-SocketIO==5.3.6
-python-socketio==5.10.0
-python-engineio==4.7.1
-google-generativeai==0.8.0
-requests==2.31.0
-python-dotenv==1.0.0
+Flask
+Flask-CORS
+Flask-SocketIO
+python-socketio
+python-engineio
+google-generativeai
+requests
+python-dotenv
 elevenlabs
-PyAudio==0.2.11
-websockets==12.0
+PyAudio
+websockets
 sqlite3-lib
-aiohttp==3.9.1
-asyncio==3.4.3
-json5==0.9.14
-pydub==0.25.1
-PyYAML==6.0.1
-pytest==7.4.3
-pytest-asyncio==0.21.1
+aiohttp
+asyncio
+json5
+pydub
+PyYAML
+pytest
+pytest-asyncio
